:sparkles: 도메인 및 레포지토리 생성

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,10 +4,9 @@ server:
 spring:
   application:
     name: order-service
-
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
