--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// 다른 모듈과의 통신
+
+	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	// querydsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
