❤ CI/CD: Update docker-compose - adjusted mysql volume directory

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MYSQL_COLLATION: utf8mb4_unicode_ci
       TZ: "Asia/Seoul"
     volumes:
-      - product-data:/var/lib/mysql/product
+      - product-data:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
@@ -26,7 +26,7 @@ services:
       MYSQL_COLLATION: utf8mb4_unicode_ci
       TZ: "Asia/Seoul"
     volumes:
-      - order-data:/var/lib/mysql/order
+      - order-data:/var/lib/mysql
     ports:
       - "3307:3306"
     networks:
@@ -42,7 +42,7 @@ services:
       MYSQL_COLLATION: utf8mb4_unicode_ci
       TZ: "Asia/Seoul"
     volumes:
-      - payment-data:/var/lib/mysql/payment
+      - payment-data:/var/lib/mysql
     ports:
       - "3308:3306"
     networks:
@@ -58,7 +58,7 @@ services:
       MYSQL_COLLATION: utf8mb4_unicode_ci
       TZ: "Asia/Seoul"
     volumes:
-      - storage-data:/var/lib/mysql/storage
+      - storage-data:/var/lib/mysql
     ports:
       - "3309:3306"
     networks:
