--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,41 +110,41 @@ services:
         limits:
           memory: 300M
 
-  kafka2:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9093
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    ports:
-      - "9093:9093"
-    networks:
-      - lot-fresh
-    deploy:
-      resources:
-        limits:
-          memory: 300M
+  # kafka2:
+  #   image: confluentinc/cp-kafka:latest
+  #   depends_on:
+  #     - zookeeper
+  #   environment:
+  #     KAFKA_BROKER_ID: 2
+  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9093
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+  #   ports:
+  #     - "9093:9093"
+  #   networks:
+  #     - lot-fresh
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 300M
 
-  kafka3:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 3  
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9094
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    ports:
-      - "9094:9094"
-    networks:
-      - lot-fresh
-    deploy:
-      resources:
-        limits:
-          memory: 300M
+  # kafka3:
+  #   image: confluentinc/cp-kafka:latest
+  #   depends_on:
+  #     - zookeeper
+  #   environment:
+  #     KAFKA_BROKER_ID: 3  
+  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9094
+  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+  #   ports:
+  #     - "9094:9094"
+  #   networks:
+  #     - lot-fresh
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 300M
 
 volumes:
   product-data:
