--- a/storage-service/src/main/resources/application.yml
+++ b/storage-service/src/main/resources/application.yml
@@ -1,27 +1,18 @@
-server:
-  port: 1
-
+# database 연동 설정
 spring:
-  application:
-    name: storage-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
+    url: jdbc:mysql://127.0.0.1:3306/lotfresh?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+    password: 123456
+  thymeleaf:
+    cache: false
+
+  # spring data jpa 설정
   jpa:
+    database-platform: org.hibernate.dialect.MySQL57Dialect
+    open-in-view: false
+    show-sql: true
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-  profiles:
-    active:
-      - develop
-    group:
-      develop: "env"
-
-
-logging:
-  level:
-    org.hibernate.SQL: debug
-    org.hibernate.type: trace
-    org:
-      springframework: INFO
