--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -12,3 +12,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+logging:
+  level:
+    org:
+      springframework:
+        transaction:
+          interceptor: TRACE
