--- a/order-service/src/test/resources/application.yml
+++ b/order-service/src/test/resources/application.yml
@@ -12,3 +12,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092
+    consumer:
+      auto-offset-reset: earliest
+      bootstrap-servers: localhost:9092
+    server-config: localhost:9092
