:adhesive_bandage: Fix : 테스트 카프카 포트번호 변경
9092는 실제 카프카 서버의 포트번호기 때문에 이를 피해 다른값으로 사용

--- a/order-service/src/test/resources/application.yml
+++ b/order-service/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:~/productService
+    url: jdbc:h2:mem:~/orderService
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -15,8 +15,15 @@ spring:
 
   kafka:
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: localhost:7777
     consumer:
       auto-offset-reset: earliest
-      bootstrap-servers: localhost:9092
-    server-config: localhost:9092
+      bootstrap-servers: localhost:7777
+    server-config: localhost:7777
+
+logging:
+  level:
+    org:
+      springframework:
+        transaction:
+          interceptor: TRACE
