--- a/user-service/user-application/src/main/resources/application.yml
+++ b/user-service/user-application/src/main/resources/application.yml
@@ -1,4 +1,19 @@
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 5dca3ee52a5c5e81b0415473b05366f0
+            client-secret: RifFZkO0SBAISOUJn2XsGVRczr0h9qFj
+            redirect-uri: http://localhost:8081/auth/login/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
