--- a/user-service/user-container/build.gradle
+++ b/user-service/user-container/build.gradle
@@ -10,17 +10,16 @@ repositories {
 }
 
 dependencies {
-
+    implementation(libs.spring.feign)
+    implementation(libs.spring.cloud)
     implementation(libs.sl4j)
+    implementation(libs.jpa)
     annotationProcessor(libs.lombok)
     compileOnly(libs.lombok)
     implementation(libs.java.validation)
     implementation(libs.spring.boot)
-    implementation(libs.spring.feign)
-    implementation project(':user-service:user-domain:user-domain-application')
-    implementation project(':user-service:user-domain:user-domain-core')
-    implementation project(':common:common-domain')
-    implementation project(':common:common-application')
+    implementation project(':user-service:user-application')
+    implementation project(':user-service:user-data-access')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
