--- a/auth-service/auth-domain/auth-domain-applicaiton/build.gradle
+++ b/auth-service/auth-domain/auth-domain-applicaiton/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compileOnly libs.lombok
     implementation project(':')
     implementation libs.java.validation
+    implementation libs.spring.boot
     implementation project(':auth-service:auth-domain:auth-domain-core')
     implementation project(':common:common-domain')
     implementation libs.spring.boot
