--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ spring-kafka = { module = "org.springframework.kafka:spring-kafka", version = "2
 spring-cloud = { module = "org.springframework.cloud:spring-cloud-starter", version = "2.2.9.RELEASE" }
 spring-fegin ={module ="org.springframework.cloud:spring-cloud-starter-openfeign", version ="2.2.9.RELEASE"}
 spring-test = { module = "org.springframework.boot:spring-boot-starter-test", version = "2.7.16" }
+spring-security={module ="org.springframework.boot:spring-boot-starter-security", version ="2.7.16"}
 spring-feign={module ="org.springframework.cloud:spring-cloud-starter-openfeign", version ="2.2.9.RELEASE"}
 java-validation = { module = "javax.validation:validation-api", version = "2.0.1.Final" }
 jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa", version = "2.7.5" }
