--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     username: sa
     password:
 
+  redis:
+    host: localhost
+    port: 6379
+    password:
+
   jpa:
     hibernate:
       ddl-auto: create
@@ -12,6 +17,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+  profiles:
+    active: test
 
 logging:
   level:
