--- a/order-service/src/test/resources/application.yml
+++ b/order-service/src/test/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: test
+
   datasource:
     url: jdbc:h2:mem:~/orderService
     driver-class-name: org.h2.Driver
@@ -20,6 +23,10 @@ spring:
       auto-offset-reset: earliest
       bootstrap-servers: localhost:7777
     server-config: localhost:7777
+
+  redis:
+    host: localhost
+    port: 6379
 
 logging:
   level:
