--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 1
+  port: 0
 
 spring:
   application:
@@ -12,6 +12,18 @@ spring:
       hibernate:
         format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+
+  kafka:
+    producer:
+      bootstrap-servers: kafka:9092
+      acks: all
+    consumer:
+      bootstrap-servers: kafka:9092
+      group-id: payment-service-group
+    listener:
+      type: SINGLE
+
+
   profiles:
     active:
       - develop
