feat : Spring Batch 추가

--- a/storage-service/src/main/resources/application.yml
+++ b/storage-service/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 # database 연동 설정
 spring:
+  batch:
+    job:
+      names: ${job.name:NONE}
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-
     url: jdbc:mysql://127.0.0.1:3306/lotfresh?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 123456
