--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -15,7 +15,8 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue-slick-carousel": "^1.0.6",
-    "vue-slick-ts": "^1.1.0"
+    "vue-slick-ts": "^1.1.0",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
