:pencil2: Fix : openfeign 버전 명시

--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.8'
 	// querydsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
