add : local redis 설정추가

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -18,10 +18,8 @@ spring:
     group:
       develop: "env"
 
-
 logging:
   level:
     org.hibernate.SQL: debug
-    org.hibernate.type: trace
     org:
-      springframework: INFO
+      springframework:
