--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
+    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
