--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -17,7 +17,8 @@
     "vue-router": "^4.2.4",
     "vue-slick-carousel": "^1.0.6",
     "vue-slick-ts": "^1.1.0",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vuetify": "^3.3.22"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
