--- a/storage-service/src/main/resources/application.yml
+++ b/storage-service/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
     password: 123456
   thymeleaf:
     cache: false
-
+  redis:
+    host: localhost
+    port: 6379
   # spring data jpa 설정
   jpa:
     database-platform: org.hibernate.dialect.MySQL57Dialect
