--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
     "swiper": "^10.3.1",
     "vue": "^3.3.4",
