❤ CI/CD: frontend proxy대상 port번호 80으로 변경

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -1,15 +1,19 @@
 server {
     listen 80;
-    server_name lot-fresh.shop www.lot-fresh.shop;
-    server_tokens off;
-  
-    if ($host = 'www.lot-fresh.shop') {
-        return 301 https://lot-fresh.shop$request_uri;
+    server_name *.lot-fresh.shop;
+    # server_tokens off;
+
+    #if ($host = 'www.lot-fresh.shop') {
+    #    return 301 https://lot-fresh.shop$request_uri;
+    #}
+    if ($http_x_forwarded_proto = 'http'){
+        return 301 https://$host$request_uri;
     }
+
 
 	# 매칭안하면 프론트엔드로 보냄.
     location / {
-        proxy_pass http://client:5173;
+        proxy_pass http://client:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-Ip $remote_addr;
     }
