❤CI/CD: Nginx default.conf 변경- 리액트 올라오면 받을 수 있게 서버 경로 분기처리

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -1,6 +1,23 @@
+# admin.lot-fresh.shop에 대한 요청 처리
 server {
     listen 80;
-    server_name *.lot-fresh.shop;
+    server_name admin.lot-fresh.shop;
+
+    if ($http_x_forwarded_proto = 'http'){
+        return 301 https://$host$request_uri;
+    }
+
+    location / {
+        proxy_pass http://client:80; # 리액트 올라오면 admin-client로 변경
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-Ip $remote_addr;
+    }
+}
+
+
+server {
+    listen 80;
+    server_name www.lot-fresh.shop lot-fresh.shop;
     # server_tokens off;
 
     #if ($host = 'www.lot-fresh.shop') {
