❤ CI/CD: 중복된 https 리디렉션 제거

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -3,9 +3,9 @@ server {
     listen 80;
     server_name admin.lot-fresh.shop;
 
-    if ($http_x_forwarded_proto = 'http'){
-        return 301 https://$host$request_uri;
-    }
+    # if ($http_x_forwarded_proto = 'http'){
+    #     return 301 https://$host$request_uri;
+    # }
 
     location / {
         proxy_pass http://client:80; # 리액트 올라오면 admin-client로 변경
@@ -23,9 +23,9 @@ server {
     #if ($host = 'www.lot-fresh.shop') {
     #    return 301 https://lot-fresh.shop$request_uri;
     #}
-    if ($http_x_forwarded_proto = 'http'){
-        return 301 https://$host$request_uri;
-    }
+    # if ($http_x_forwarded_proto = 'http'){
+    #     return 301 https://$host$request_uri;
+    # }
 
 
 	# 매칭안하면 프론트엔드로 보냄.
