❤CI/CD: cart-service 살리는걸로 다시 결정됨

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -31,30 +31,35 @@ server {
         proxy_set_header X-Real-Ip $remote_addr;
     }
 
-   # user-service에 대한 요청을 처리. - payment-service
-   location /user-service/ {
+    # user-service에 대한 요청을 처리.
+    location /user-service/ {
+        proxy_pass http://gateway-service:8090;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-Ip $remote_addr;
+    }
+
+   # cart-service에 대한 요청을 처리.
+   location /cart-service/ {
        proxy_pass http://gateway-service:8090; 
        proxy_set_header Host $host; 
        proxy_set_header X-Real-Ip $remote_addr; 
    }
 
-
-	# product-service에 대한 요청을 처리. - order-service
+	# product-service에 대한 요청을 처리.
    location /product-service/ {
        proxy_pass http://gateway-service:8090; 
        proxy_set_header Host $host; 
        proxy_set_header X-Real-Ip $remote_addr; 
    }
 
-
-	# order-service에 대한 요청을 처리. - delivery-service
+	# order-service에 대한 요청을 처리.
    location /order-service/ {
        proxy_pass http://gateway-service:8090; 
        proxy_set_header Host $host; 
        proxy_set_header X-Real-Ip $remote_addr; 
    }
 
-	# payment-service에 대한 요청을 처리. - delivery-service
+	# payment-service에 대한 요청을 처리.
    location /payment-service/ {
        proxy_pass http://gateway-service:8090; 
        proxy_set_header Host $host; 
