--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // eureka server가 구현되면 주석 해제
-//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.8'
     // querydsl
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
