--- a/product-service/src/test/resources/application.yml
+++ b/product-service/src/test/resources/application.yml
@@ -20,6 +20,9 @@ spring:
 
   profiles:
     active: test
+  cloud:
+    discovery:
+      enabled: false # 테스트 코드 동작시 false로 해야 한다.
 
 logging:
   level:
