add : local환경 yml 설정 추가

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -14,9 +14,10 @@ spring:
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
   profiles:
     active:
-      - develop
+      - ${PROFILE:local}
     group:
       develop: "env"
+      local: "local"
 
 eureka:
   client:
