--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.8'
 	// querydsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
