--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
       ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-  profiles:
-    active:
-      - ${PROFILE:local}
-    group:
-      develop: "env"
-      local: "local"
+  # profiles:
+  #   active:
+  #     - ${PROFILE:local}
+  #   group:
+  #     develop: "env"
+  #     local: "local"
 
 eureka:
   client:
