--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -4,18 +4,22 @@ server:
 spring:
   application:
     name: product-service
+  datasource:
+    url: jdbc:mysql://${DB_IP}:${PRODUCT_DB_PORT}/${PRODUCT_DB_SCHEMA}?serverTimeZone=UTC
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-  # profiles:
-  #   active:
-  #     - ${PROFILE:local}
-  #   group:
-  #     develop: "env"
-  #     local: "local"
+
+  redis:
+    host: ${DB_IP}
+    port: ${REDIS_PORT}
+    password: ${DB_PASSWORD}
 
 eureka:
   client:
