--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.16'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'shop.lot-fresh'
@@ -33,6 +40,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	// implementation 'io.projectreactor.netty:reactor-netty-core'
 	// implementation 'io.projectreactor.netty:reactor-netty-http'
+
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
