--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,9 +1,16 @@
 server:
-  port: 8081
+  port: 8085
 
 spring:
   application:
     name: payment-service
+
+  datasource:
+    url: jdbc:mysql://${DB_IP}:${PAYMENT_DB_PORT}/${PAYMENT_DB_SCHEMA}?serverTimeZone=UTC
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
 
   jpa:
     hibernate:
@@ -12,6 +19,11 @@ spring:
       hibernate:
         format_sql: true
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+
+  redis:
+    host: ${DB_IP}
+    port: ${REDIS_PORT}
+    password: ${DB_PASSWORD}
 
   kafka:
     producer:
@@ -46,3 +58,14 @@ kakaopay:
   cancel_url: "https://lot-fresh.shop/order/payments/kakaopay/cancel"
   admin_key: "8f2de5fceef170ccd187a4e94c813657"
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-service:8761/eureka/
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
+    org:
+      springframework: INFO
