--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -16,12 +16,15 @@ server {
     listen 80;
     server_name www.lot-fresh.shop lot-fresh.shop;
     
-
-	# 매칭안하면 프론트엔드로 보냄.
-    location / {
-        proxy_pass http://client:80;
+    # 매칭안하면 프론트엔드로.
+	location / {
+        try_files $uri $uri/ @frontend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-Ip $remote_addr;
+    }
+
+    location @frontend {
+        proxy_pass http://client:80;
     }
 
     # auth-service에 대한 요청을 처리.
