--- a/user-service/user-domain/user-domain-application/build.gradle
+++ b/user-service/user-domain/user-domain-application/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation(libs.spring.boot)
     implementation(libs.java.validation)
     implementation project(':user-service:user-domain:user-domain-core')
