--- a/combined-user-service/auth-service/auth-container/build.gradle
+++ b/combined-user-service/auth-service/auth-container/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation project(':auth-service:auth-dataaccess')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
 
 test {
