--- a/auth-service/auth-container/src/main/resources/application.yml
+++ b/auth-service/auth-container/src/main/resources/application.yml
@@ -1,35 +1,32 @@
-  server:
-    port: 8082
-  spring:
-    datasource:
-      url: jdbc:mysql://localhost:3306/auth-service?serverTimezone=Asia/Seoul
-      username: root
-      password: k1651227
-    jpa:
+server:
+  port: 8080
+spring:
+  datasource:
+    url: jdbc:mysql://${DB_IP}:${AUTH_DB_PORT}/${AUTH_DB_SCHEMA}?serverTimeZone=UTC
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
       hibernate:
-        ddl-auto: update
-      show-sql: true
+        format_sql: true
+      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
 
-    cloud:
-      config:
-        import-check:
-          enabled: false
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client-id: 5dca3ee52a5c5e81b0415473b05366f0
-            client-secret: RifFZkO0SBAISOUJn2XsGVRczr0h9qFj
-            redirect-uri: http://localhost:8082/auth/oauth/kakao/login
-            authorization-grant-type: authorization_code
-            client-authentication-method: POST
-            client-name: lotte-fresh
-            grant-type: authorization_code
+  cloud:
+    config:
+      import-check:
+        enabled: false
 
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: authUserId
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-service:8761/eureka/
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
+    org:
+      springframework: INFO
