❤CI/CD: auth, user dockerfile jar 이름변경

--- a/combined-user-service/user-service/Dockerfile
+++ b/combined-user-service/user-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:11-slim
 WORKDIR /usr/src/app
 
-ARG JAR_FILE=./*-SNAPSHOT.jar
+ARG JAR_FILE=./*-SNAPSHOT-plain.jar
 COPY ${JAR_FILE} app.jar
 CMD ["java","-jar","app.jar"]
 # 
