--- a/combined-user-service/auth-service/Dockerfile
+++ b/combined-user-service/auth-service/Dockerfile
@@ -1,8 +1,7 @@
 FROM openjdk:11-slim
 WORKDIR /usr/src/app
 
-# ARG JAR_FILE=./*-SNAPSHOT-plain.jar
-# COPY ${JAR_FILE} app.jar
-COPY auth-service-1.0-SNAPSHOT-plain.jar app.jar
+ARG JAR_FILE=./*-SNAPSHOT-plain.jar
+COPY ${JAR_FILE} app.jar
 CMD ["java","-jar","app.jar"]
 # 
