--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -15,6 +15,17 @@ spring:
     port: ${REDIS_PORT}
     password: ${DB_PASSWORD}
 
+  kafka:
+    producer:
+      bootstrap-servers: ${KAFKA_IP}:9092
+      acks: all
+    consumer:
+      bootstrap-servers: ${KAFKA_IP}:9092
+      group-id: order-detail-status
+    listener:
+      type: SINGLE
+
+
 eureka:
   client:
     serviceUrl:
