:pencil2: Fix : 서버 업로드를 위한 yml파일 관련 내용 수정

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,13 +4,14 @@ spring:
   jpa:
     properties:
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+    hibernate:
+      ddl-auto: update
   profiles:
     active:
       - ${PROFILE:local}
     group:
       develop: "env"
       local: "local"
-
 eureka:
   client:
     serviceUrl:
