--- a/auth-service/auth-container/build.gradle
+++ b/auth-service/auth-container/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
+jar {
+    manifest {
+        attributes 'Main-class': 'com.bit.lotte.fresh.app'
+    }
+}
 test {
     useJUnitPlatform()
 }
