--- a/auth-service/auth-container/src/main/resources/application.yml
+++ b/auth-service/auth-container/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
   cloud:
     config:
