--- a/user-service/user-container/src/main/resources/application.yml
+++ b/user-service/user-container/src/main/resources/application.yml
@@ -12,7 +12,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+        dialect: org.hibernate.dialect.MySQLDialect
+
 
   cloud:
     config:
