--- a/storage-service/build.gradle
+++ b/storage-service/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
