✨Feat: Gateway-service - Product Service를 위한 필터 추가

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -56,7 +56,7 @@ spring:
             - Path=/product-service/**
           filters:
             - RewritePath=/product-service/(?<segment>.*), /$\{segment}
-#            - AuthenticationFilter
+            - ProductServiceFilter
 
         - id: order-service
           uri: lb://ORDER-SERVICE
