❤CI/CD: order-service eureka server에 등록되는 port번호 설정

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8083
+
 spring:
   application:
     name: order-service
@@ -27,7 +30,6 @@ spring:
       group-id: order-detail-status
     listener:
       type: SINGLE
-
 
 eureka:
   client:
