--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -19,6 +19,7 @@
     "swiper": "^10.3.1",
     "vue": "^3.3.4",
     "vue-daum-postcode": "^1.2.1",
+    "vue-kakao-sdk": "^0.2.5",
     "vue-router": "^4.2.4",
     "vue-slick-carousel": "^1.0.6",
     "vue-slick-ts": "^1.1.0",
