--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@types/kakao-js-sdk": "^1.39.3",
     "axios": "^1.6.0",
     "element-plus": "^2.4.1",
     "normalize.css": "^8.0.1",
