--- a/cart-service/cart-container/bin/main/application.yml
+++ b/cart-service/cart-container/bin/main/application.yml
@@ -18,7 +18,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
   cloud:
     config:
@@ -36,4 +36,3 @@ logging:
     org.hibernate.type: trace
     org:
       springframework: INFO
-#
