❤CI/CD: jenkins 환경변수 사용할수있게 cart-service 설정;

--- a/cart-service/cart-container/src/main/resources/application.yml
+++ b/cart-service/cart-container/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8082
 spring:
   application:
-    name: storage-service
+    name: cart-service
   redis:
     host: ${DB_IP}
     port: ${REDIS_PORT}
@@ -36,4 +36,3 @@ logging:
     org.hibernate.type: trace
     org:
       springframework: INFO
-#
