--- a/cart-service/cart-container/bin/main/application.yml
+++ b/cart-service/cart-container/bin/main/application.yml
@@ -2,13 +2,13 @@ server:
   port: 8082
 spring:
   application:
-    name: storage-service
+    name: cart-service
   redis:
     host: ${DB_IP}
     port: ${REDIS_PORT}
     password: ${DB_PASSWORD}
   datasource:
-    url: jdbc:mysql://${DB_IP}:${STORAGE_DB_PORT}/${STORAGE_DB_SCHEMA}?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://${DB_IP}:${CART_DB_PORT}/${CART_DB_SCHEMA}?useSSL=false&serverTimezone=UTC
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -36,4 +36,3 @@ logging:
     org.hibernate.type: trace
     org:
       springframework: INFO
-#
