❤CI/CD: admin-front 빌드 테스트

--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -5,7 +5,7 @@ server {
 
 
     location / {
-        proxy_pass http://client:80; # 리액트 올라오면 admin-client로 변경
+        proxy_pass http://admin-client:80; # 리액트 올라오면 admin-client로 변경
         proxy_set_header Host $host;
         proxy_set_header X-Real-Ip $remote_addr;
     }
