❤CI/CD: storage-service 유레카에 등록

--- a/storage-service/build.gradle
+++ b/storage-service/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	// eureka server가 구현되면 주석 해제
-//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	// querydsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
