❤CI/CD: gateway user로 가는 요청 필터 재설정

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
             - Path=/user-service/**
           filters:
             - RewritePath=/user-service/(?<segment>.*), /$\{segment}
-            # - AuthenticationFilter
+            - AuthenticationFilter
 
         - id: cart-service
           uri: lb://CART-SERVICE
