✨Chore: stroage-service 필터제거

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -80,7 +80,7 @@ spring:
             - Path=/storage-service/**
           filters:
             - RewritePath=/storage-service/(?<segment>.*), /$\{segment}
-            - AuthenticationFilter
+            # - AuthenticationFilter
 
 eureka:
   client:
