❤CI/CD: gateway - cart 필터 추가

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
             - Path=/cart-service/**
           filters:
             - RewritePath=/cart-service/(?<segment>.*), /$\{segment}
-            # - AuthenticationFilter
+            - AuthenticationFilter
 
         - id: product-service
           uri: lb://PRODUCT-SERVICE
