❤CI/CD: gateway -  stroage에 필터제거

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -87,7 +87,7 @@ spring:
             - Path=/storage-service/**
           filters:
             - RewritePath=/storage-service/(?<segment>.*), /$\{segment}
-            # - AuthenticationFilter
+            - AuthenticationFilter
 
 eureka:
   client:
